Fix scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ body {
   color: #e8e8e8;
   font-weight: 300;
   margin: 0;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -139,6 +140,7 @@ blockquote cite {
 .sidebar {
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
   .fake {
     display: block; /* 1 */
     flex-grow: 1;
